--- a/css/list-group.css
+++ b/css/list-group.css
@@ -2,7 +2,6 @@
 	list-style-type: none;
 	padding: 0;
 	margin: 1rem 0.25rem;
-	overflow: hidden;
 }
 
 .list-group li {
